package(default_visibility = ["//python:__pkg__"])

sh_binary(
    name = "move_ops",
    srcs = ["move_ops.sh"],
    data = [
        "//:libmecab",
        "//python/mecab:bind.so",
    ],
)

py_test(
    name = "mecab_test",
    srcs = ["mecab_test.py"],
    deps = ["//python/mecab:mecab"],
    data = ["//python/mecab:bind.so", "//:libmecab", "//:test-data"],
    imports = ["."],
)
